--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +17,8 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.13",
     "morgan": "^1.10.0",
-    "secrets": "^1.1.5"
+    "secrets": "^1.1.5",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "eslint": "^7.18.0",
